<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black_gray"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/cal_symbol"
        android:layout_width="46dp"
        android:layout_height="67dp"
        android:text="@string/cal_equal"
        android:textColor="@color/color_white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152" />

    <TextView
        android:id="@+id/result_number"
        android:layout_width="106dp"
        android:layout_height="73dp"
        android:layout_marginStart="28dp"
        android:text="@string/cal_zero"
        android:textColor="@color/color_white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cal_symbol"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.144" />

    <EditText
        android:id="@+id/input_number"
        android:layout_width="154dp"
        android:layout_height="72dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/input_edit_text"
        android:inputType="number"
        android:textColorHint="@color/color_white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toEndOf="@+id/cal_symbol"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <Button
        android:id="@+id/plus"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:background="@color/color_purple"
        android:onClick="onPlus"
        android:text="@string/cal_plus"
        android:textColor="@color/color_white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/minus"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_marginStart="24dp"
        android:background="@color/color_purple"
        android:onClick="onMinus"
        android:text="@string/cal_minus"
        android:textColor="@color/color_white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toEndOf="@+id/plus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/star"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_purple"
        android:onClick="onStar"
        android:text="@string/cal_star"
        android:textColor="@color/color_white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus"
        app:layout_constraintVertical_bias="0.163" />

    <Button
        android:id="@+id/slash"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_purple"
        android:onClick="onSlash"
        android:text="@string/cal_slash"
        android:textColor="@color/color_white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toEndOf="@+id/star"
        app:layout_constraintTop_toBottomOf="@+id/minus"
        app:layout_constraintVertical_bias="0.161" />

    <Button
        android:id="@+id/roof"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_purple"
        android:onClick="onRoof"
        android:text="@string/cal_roof"
        android:textColor="@color/color_white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star"
        app:layout_constraintVertical_bias="0.29" />

    <Button
        android:id="@+id/equal"
        android:layout_width="140dp"
        android:layout_height="90dp"
        android:background="@color/color_green"
        android:onClick="onEqual"
        android:text="@string/cal_equal"
        android:textColor="@color/color_white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/roof"
        app:layout_constraintTop_toBottomOf="@+id/slash"
        app:layout_constraintVertical_bias="0.323" />

    <Button
        android:id="@+id/reset"
        android:layout_width="351dp"
        android:layout_height="67dp"
        android:background="@color/color_orange"
        android:onClick="onReset"
        android:text="@string/cal_reset"
        android:textColor="@color/color_white"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.328"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cal_symbol"
        app:layout_constraintVertical_bias="0.935" />
</androidx.constraintlayout.widget.ConstraintLayout>